--- a/report4.ipynb
+++ b/report4.ipynb
@@ -6289,7 +6289,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python /content/drive/MyDrive/University1652-Baseline/test.py --name ft_ResNet50_dwq --test_dir /content/drive/MyDrive/University-Release/test  --batchsize 32 --which_epoch 119"
+        "!python /content/drive/MyDrive/University1652-Baseline/test.py --name ft_ResNet50_1 --test_dir /content/drive/MyDrive/University-Release/test  --batchsize 32 --which_epoch 119"
       ],
       "metadata": {
         "colab": {
